--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiley</title>
     <link rel="icon" type="image/png" href="assets/img/heather.png" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
 
-    <script src="./assets/js/libs/phaser.min.js"></script>
-    <script src="./assets/js/main.js"></script>
-
+    <script src="assets/js/libs/phaser.min.js"></script>
+        <script src="assets/js/main.js" type="module"></script>
 </body>
 </html>
